# chat_back

./: .env-render  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  requirements.txt
.alembic/: env.py
.alembic/versions/: 2023_12_04_0221-0f3b55168285_init3.py  2023_12_04_0238-bf05da1a0279_init3.py  2023_12_04_0339-7cff272eadbd_init3.py  2023_12_04_0340-5738c06358a8_init4.py  2023_12_04_0359-0fe33c3fdb3e_init5.py  2023_12_05_2202-8696476fa0aa_init6.py  2023_12_07_0314-fb07a5f46f2b_init.py  2023_12_07_1524-e2519cb0ecbd_init.py  2023_12_07_1608-ecd28781f8e7_init3.py  2023_12_07_1616-0f1c33e67a6c_init3.py  2023_12_07_1619-0d7a9cd84dc4_init3.py  2023_12_07_1755-bf8b0b94e3b7_init3.py  2023_12_08_0427-8de29309e103_init.py
app/: config.py  database.py  exceptions.py  main.py
app/admin/: views.py
app/auth/: auth.py  routes.py  user_manager.py
app/base/: dao.py
app/chat/: dao.py  model.py  router.py  schemas.py  ws_connect.py  ws_router.py
app/crud_sqlalchemy/: _base.py  _types.py  _utils.py  sqlalchemy.py
app/doctor/: dao.py  model.py  routes.py  schemas.py
app/images/: router.py
app/importer/: router.py  utils.py
app/media/: dao.py  model.py
app/pages/: router.py
app/patient/: dao.py  model.py  routes.py  schemas.py
app/tasks/: celery.py  email_templates.py  tasks.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/chat/: chat.html  chats.html
app/tests/: conftest.py
app/tests/integration_tests/test_chats/: test_api.py  test_dao.py
app/tests/unit_tests/test_users/: test_dao.py
app/user/: dao.py  dependencies.py  model.py  schemas.py
helpers/: table_to_csv_generator.ipynb  test_data.sql
