[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Daniil Solnyshkin <daniilellovich@gmail.com>"]
readme = "README.md"
packages = [{include = "chat"}]
homepage = "localhost:8000"
documentation = "localhost:8000/docs"

# poetry export -f requirements.txt --without-hashes > requirements.txt
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
alembic = "^1.11.2"
asyncpg = "^0.28.0"
redis = "^4.6.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
sqladmin = "^0.14.0"
python-json-logger = "^2.0.7"
aiohttp = "^3.8.5"
fastapi-pagination = "^0.12.9"
sentry-sdk = "^1.34.0"
fastapi-cache2 = "^0.2.1"
fastapi-versioning = "^0.10.0"
prometheus-fastapi-instrumentator = "^6.1.0"
python-jose = "^3.3.0"
pillow = "^10.1.0"
celery = "^5.3.4"
flower = "^2.0.1"
gunicorn = "^21.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.321"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 88
target-version = [ "py310", "py311", "py312" ]
include = '\.pyi?$'
# exclude = "((.eggs | .git | .pytest_cache | build | dist))"


# [tool.poetry.scripts]
# my-script ="uvicorn app.main:app --reload"

[tool.isort]
line_length = 120
extend_skip = [".md"]
extend_skip_glob = [".alembic", ".venv"]

[tool.pyright]
include = ["app"]

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "app"] # by default, only standard moduls watched

[tool.pytest.ini_options]
pythonpath = [
  ".", "app",
]
asyncio_mode="auto"